Correct Alignment of Text Within Component
Seems like our faq section wasn't really aligned

--- a/components/Sponsor_Faq/FAQ.module.css
+++ b/components/Sponsor_Faq/FAQ.module.css
@@ -157,6 +157,10 @@
     }
     .subtitle{   
         text-align: left;
+        padding-left: 0.1em;
+    }
+    .faq button{
+        margin-left: 0.2em;
     }
 }
 /* large screens */
@@ -168,17 +172,22 @@
         font-size: 1.5rem;
     }
     .faq{
+        margin-left: 0;
         padding: 1rem;
         text-align: left;
     }
     .faq span{
-        font-size: 8rem;    
+        font-size: 8rem;  
     }
     .subtitle{
-        font-size: 3rem;    
+        font-size: 3rem;  
+        padding-left: 0.05em;
+    }
+    .faq button{
+        margin-left: 0.15em;
     }
     .chat{
-        margin-top: 2.5rem;   
+        margin-top: 2.5rem; 
         padding: 1rem;  
         width: 50%;
     }
